RESOLVED FIXED250224
Page Up/Down scrolling feels too slow
https://bugs.webkit.org/show_bug.cgi?id=250224
Summary Page Up/Down scrolling feels too slow
Richard Robinson
Reported 2023-01-06 12:56:18 PST
Attachments
Richard Robinson
Comment 1 2023-01-06 13:00:27 PST
EWS
Comment 2 2023-01-06 19:50:45 PST
Committed 258598@main (f7ad74a90f6f): <https://commits.webkit.org/258598@main> Reviewed commits have been landed. Closing PR #8318 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.