Page Up/Down scrolling feels too slow https://bugs.webkit.org/show_bug.cgi?id=250224 rdar://101651891

Reviewed by Tim Horton.

Adjusts the keyboard scrolling parameters so that it feels faster.

* Source/WebCore/platform/KeyboardScroll.h:

Canonical link: https://commits.webkit.org/258598@main